- New Notes Spectrum: -1, -2, -3, -4, -5, -6, -7, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17
- If 1 - 8, stop
- [NEW: Include patterns whose sum is equal to 0], rule: stops when 1 or 17 and beyond is reached.
- If the next note to generate is greater than 17, 
- When 17 is reached or passed, arguments orders reset and they are multiplied by -1. Then stop the pattern when 1 or beyond 1 is reached.